# SCalendar

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: datasource.c  datasource.h  notifications.c  notifications.h  scal.c  scal.h  scal_icon.h
